--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- SEO & Open Graph -->
-  <meta property="og:title" content="Invitación • Luis Miguel" />
-  <meta property="og:description" content="Tenemos el honor de invitarle a compartir un acontecimiento de gran significado espiritual." />
+  <meta property="og:title" content="San Valentin" />
+  <meta property="og:description" content="TE AMO" />
   
   <!-- RUTA CORRECTA DE LA IMAGEN -->
   <meta property="og:image"
@@ -19,14 +19,14 @@
 
   <!-- Para WhatsApp y redes sociales -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Invitación • Luis Miguel">
-  <meta name="twitter:description" content="Tenemos el honor de invitarle a compartir un acontecimiento de gran significado espiritual.">
+  <meta name="twitter:title" content="San Valentin">
+  <meta name="twitter:description" content="Te Amo">
 
   <!-- MISMO PATH CORRECTO -->
   <meta name="twitter:image"
         content="https://bleck09.github.io/Luis/imagenes/Portada.jpg" />
 
-  <title>Luis Miguel</title>
+  <title>Te Amo</title>
 
   <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&family=Allison&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Allan:wght@400;700&display=swap" rel="stylesheet">
