--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:image"
         content="https://bleck09.github.io/Luis/imagenes/Portada.jpg" />
   
-  <meta property="og:url" content="https://bleck09.github.io/Luis/" />
+  <meta property="og:url" content="https://bleck09.github.io/SanValentin/" />
   <meta property="og:type" content="website" />
 
   <!-- Para WhatsApp y redes sociales -->
